--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link href="assets/css/main.css" rel="stylesheet">
     <!-- Main Modal Links -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<link rel="canonical" href="https://main--divinehealthcaresolutions.netlify.app/ />
     <!-- =======================================================
          * Template Name: Medilab
          * Template URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
@@ -318,7 +319,7 @@
                         <!-- End Info Item -->
                     </div>
                     <div class="col-lg-8">
-                        <form id="contact-form" class="php-email-form" method="post" data-aos="fade-up" data-aos-delay="200" data-netlify="true">
+                        <form id="contact-form" class="php-email-form" method="post" data-aos="fade-up" data-aos-delay="200" data-netlify="true" netlify>
                             <input type="hidden" name="form-name" value="contact">
                             <div class="row gy-4">
                                 <!-- Name Input -->
