--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="assets/css/main.css" rel="stylesheet">
     <!-- Main Modal Links -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-	<link rel="canonical" href="https://main--divinehealthcaresolutions.netlify.app/ />
+	<link rel="canonical" href="https://main--divinehealthcaresolutions.netlify.app/">
     <!-- =======================================================
          * Template Name: Medilab
          * Template URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
@@ -58,10 +58,10 @@
         <!-- End Top Bar -->
         <div class="branding d-flex align-items-center">
             <div class="container position-relative d-flex align-items-center justify-content-between">
-                <a class="logo d-flex align-items-center me-auto">
+                <div class="logo d-flex align-items-center me-auto">
                     <img src="assets/img/caring-hands.jpeg" alt="Caring Hands">
                     <h1 class="sitename">Divine HealthCare Solutions</h1>
-                </a>
+                </div>
                 <nav id="navmenu" class="navmenu">
                     <ul>
                         <li><a href="#hero" class="active">Home<br></a></li>
@@ -161,9 +161,9 @@
                             <div class="icon">
                                 <i class="fas fa-heartbeat"></i>
                             </div>
-                            <a class="stretched-link">
+                            <div class="stretched-link">
                                 <h3>Respite and Home Care Services</h3>
-                            </a>
+                            </div>
                             <p><strong>Respite Care:</strong> Providing temporary relief for primary caregivers in participants’ own environment or respite accommodation.</p>
                             <p><strong>Home Care Services:</strong> Offering assistance with daily living activities (ADLs) from low to high care.</p>
                         </div>
@@ -174,9 +174,9 @@
                             <div class="icon">
                                 <i class="fas fa-pills"></i>
                             </div>
-                            <a class="stretched-link">
+                            <div class="stretched-link">
                                 <h3>Social and Community Engagement</h3>
-                            </a>
+                            </div>
                             <p><strong>Social Activities: </strong>Organizing indoor and outdoor activities to promote socialization and community engagement.</p>
                             <p><strong>Innovative Community Participation: </strong>Encouraging community involvement through innovative programs.</p>
                         </div>
@@ -187,9 +187,9 @@
                             <div class="icon">
                                 <i class="fas fa-hospital-user"></i>
                             </div>
-                            <a class="stretched-link">
+                            <div class="stretched-link">
                                 <h3>Group and Center-Based Activities</h3>
-                            </a>
+                            </div>
                             <p><strong>Group and Centre-Based Activities: </strong>Facilitating group interactions and activities in center-based settings.</p>
                         </div>
                     </div>
@@ -199,11 +199,11 @@
                             <div class="icon">
                                 <i class="fas fa-dna"></i>
                             </div>
-                            <a class="stretched-link">
+                            <div class="stretched-link">
                                 <h3>Transportation Services</h3>
-                            </a>
+                            </div>
                             <p><strong>Assist Travel/Transport: </strong>Providing transportation services for appointments and social events.</p>
-                            <a class="stretched-link"></a>
+                            <div class="stretched-link"></div>
                         </div>
                     </div>
                     <!-- End Service Item -->
@@ -212,11 +212,11 @@
                             <div class="icon">
                                 <i class="fas fa-wheelchair"></i>
                             </div>
-                            <a class="stretched-link">
+                            <div class="stretched-link">
                                 <h3>Household and Daily Living Support</h3>
-                            </a>
+                            </div>
                             <p><strong>Assistive Products for Household Activities: </strong>Providing assistance with daily living activities (ADLs) and household tasks using assistive products, tailored to meet individual needs from low to high care..</p>
-                            <a class="stretched-link"></a>
+                            <div class="stretched-link"></div>
                         </div>
                     </div>
                     <!-- End Service Item -->
@@ -225,12 +225,12 @@
                             <div class="icon">
                                 <i class="fas fa-notes-medical"></i>
                             </div>
-                            <a class="stretched-link">
+                            <div class="stretched-link">
                                 <h3>Community Nursing Services</h3>
-                            </a>
+                            </div>
                             <p><strong>Community Nursing: </strong>Offering comprehensive nursing care, including wound and medication management, enteral feeding, health assessments, risk evaluations, mental health support,
                                 healthcare referrals, and behavior management education.</p>
-                            <a class="stretched-link"></a>
+                            <div class="stretched-link"></div>
                         </div>
                     </div>
                     <!-- End Service Item -->
@@ -319,7 +319,7 @@
                         <!-- End Info Item -->
                     </div>
                     <div class="col-lg-8">
-                        <form id="contact-form" class="php-email-form" method="post" data-aos="fade-up" data-aos-delay="200" data-netlify="true" netlify>
+                        <form id="contact-form" class="php-email-form" method="post" data-aos="fade-up" data-aos-delay="200" data-netlify="true">
                             <input type="hidden" name="form-name" value="contact">
                             <div class="row gy-4">
                                 <!-- Name Input -->
