--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <link href="assets/css/main.css" rel="stylesheet">
     <!-- Main Modal Links -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-	<link rel="canonical" href="https://main--divinehealthcaresolutions.netlify.app/">
     <!-- =======================================================
          * Template Name: Medilab
          * Template URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
@@ -286,8 +285,10 @@
             </div>
             <!-- End Section Title -->
             <div class="mb-5" data-aos="fade-up" data-aos-delay="200">
-                <iframe style="width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25181.1916626923!2d145.10896890268629!3d-37.91526715479284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad66ad657aee985%3A0x5045675218cddc0!2sClayton%20VIC%203168%2C%20Australia!5e0!3m2!1sen!2sin!4v1721470400274!5m2!1sen!2sinhttps://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25181.1916626923!2d145.10896890268629!3d-37.91526715479284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad66ad657aee985%3A0x5045675218cddc0!2sClayton%20VIC%203168%2C%20Australia!5e0!3m2!1sen!2sin!4v1721470400274!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe title="Clayton Map" style="width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25181.1916626923!2d145.10896890268629!3d-37.91526715479284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad66ad657aee985%3A0x5045675218cddc0!2sClayton%20VIC%203168%2C%20Australia!5e0!3m2!1sen!2sin!4v1721470400274!5m2!1sen!2sin" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
+
             <!-- End Google Maps -->
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <div class="row gy-4">
