--- a/index.html
+++ b/index.html
@@ -325,22 +325,22 @@
                                 <!-- Name Input -->
                                 <div class="col-md-6">
                                     <label for="name">Name:</label>
-                                    <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required="">
+                                    <input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required>
                                 </div>
                                 <!-- Email Input -->
                                 <div class="col-md-6">
                                     <label for="email">Email:</label>
-                                    <input type="email" id="email" class="form-control" name="email" placeholder="Your Email" required="">
+                                    <input type="email" id="email" class="form-control" name="email" placeholder="Your Email" required>
                                 </div>
                                 <!-- Subject Input -->
                                 <div class="col-md-12">
                                     <label for="subject">Subject:</label>
-                                    <input type="text" id="subject" class="form-control" name="subject" placeholder="Subject" required="">
+                                    <input type="text" id="subject" class="form-control" name="subject" placeholder="Subject" required>
                                 </div>
                                 <!-- Message Textarea -->
                                 <div class="col-md-12">
                                     <label for="message">Message:</label>
-                                    <textarea id="message" class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                                    <textarea id="message" class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
                                 </div>
                                 <div class="col-md-12 text-center">
                                     <div id="loading" style="display: none;">Loading...</div>
@@ -350,6 +350,7 @@
                                 </div>
                             </div>
                         </form>
+
                     </div>
                 </div>
             </div>
