--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     </div>
                     <div class="col-lg-8">
                         <form id="contact-form" class="php-email-form" method="post" data-aos="fade-up" data-aos-delay="200" data-netlify="true">
-                            <input type="hidden" name="form-name" value="contact">
+                            <input type="hidden" name="form-name" value="contact-form">
                             <div class="row gy-4">
                                 <!-- Name Input -->
                                 <div class="col-md-6">
