--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                         <!-- End Info Item -->
                     </div>
                     <div class="col-lg-8">
-                        <form id="contact-form" class="php-email-form" method="post" data-aos="fade-up" data-aos-delay="200" data-netlify="true">
+                        <form id="contact-form" class="php-email-form" method="post" data-aos="fade-up" data-aos-delay="200" data-netlify="true" action="/">
                             <input type="hidden" name="form-name" value="contact-form">
                             <div class="row gy-4">
                                 <!-- Name Input -->
