--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="healthcare, health solutions, medical services, professional healthcare, Divine Health Care Solutions, wellness, patient care, health management">
     <meta name="author" content="Divine Health Care Solutions">
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/favicon.webp" rel="icon">
+    <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -57,7 +57,7 @@
         <div class="branding d-flex align-items-center">
             <div class="container position-relative d-flex align-items-center justify-content-between">
                 <div class="logo d-flex align-items-center me-auto">
-                    <img src="assets/img/caring-hands.jpeg" alt="Caring Hands">
+                    <img src="assets/img/caring-hands.webp" alt="Caring Hands">
                     <h1 class="sitename">Divine HealthCare Solutions</h1>
                 </div>
                 <nav id="navmenu" class="navmenu">
@@ -76,7 +76,7 @@
     <main class="main">
         <!-- Hero Section -->
         <section id="hero" class="hero section light-background">
-            <img src="assets/img/hero-bg.jpg" alt="Background of a Doctor " data-aos="fade-in">
+            <img src="assets/img/hero-bg.webp" alt="Background of a Doctor " data-aos="fade-in">
             <div class="container position-relative">
                 <div class="welcome position-relative" data-aos="fade-down" data-aos-delay="100">
                     <h2>Welcome To Divine HealthCare Solutions</h2>
@@ -241,7 +241,7 @@
             <div class="container">
                 <div class="row gy-4 gx-5">
                     <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="200">
-                        <img src="assets/img/about.jpg" class="img-fluid" alt="About Us Professionals ">
+                        <img src="assets/img/about.webp" class="img-fluid" alt="About Us Professionals ">
                         <!--<a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox pulsating-play-btn">Watch Video</a>-->
                     </div>
                     <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
@@ -380,7 +380,7 @@
                      -->
                 </div>
                 <div class="col-lg-2 col-md-3 footer-images">
-                    <img src="assets/img/ilndis.jpg" alt="I Love NDIS Logo">
+                    <img src="assets/img/ilndis.webp" alt="I Love NDIS Logo">
                 </div>
                 <div class="col-lg-3 col-md-3 footer-links">
                     <h4>Useful Links</h4>
@@ -393,7 +393,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-3 footer-images">
-                    <img src="assets/img/aboriginals-flag.jpg" alt="Aboriginals Flag">
+                    <img src="assets/img/aboriginals-flag.webp" alt="Aboriginals Flag">
                 </div>
             </div>
         </div>
