--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="KuRPWGTCtsNZaQr0Q43riZ-Rky1JE161AtBQGW7AlOs"/>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Divine HealthCare Solutions</title>
