--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="google-site-verification" content="KuRPWGTCtsNZaQr0Q43riZ-Rky1JE161AtBQGW7AlOs"/>
+	<meta name="google-site-verification" content="efzlMHe9ct78IMni2bxeZzNegM1hy-6OUyiNIiDBtjc"/>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Divine HealthCare Solutions</title>
