--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <link href="assets/css/main.css" rel="stylesheet">
       <!-- Main Modal Links -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	  <link rel="canonical" href="https://divinehealthcaresolutions.netlify.app/"/>
       <!-- =======================================================
          * Template Name: Medilab
          * Template URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
